--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -88,5 +88,5 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.55;initial catalog=Opiniometro;persist security info=True;user id=DeveloperOp;password=devop2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.55;initial catalog=Opiniometro;persist security info=True;user id=DeveloperOp;password=devop2019;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
