--- a/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\SeccionControllerTest.cs" />
     <Compile Include="Controllers\FormularioControllerTest.cs" />
+    <Compile Include="Controllers\CategoriaControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
