Arreglo a base local

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Opiniometro_WebApp/Opiniometro_WebApp/Controllers/SeleccionPermisos.cs
